<resources>
    <string name="app_name">ujrhip</string>

    <string name="aws_s3_phath">https://s3-ap-northeast-1.amazonaws.com/ujrhip727dc1caafc14cabbd4f1379cb5fc041/</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--회원가입-->
    <string name="IdHintText">아이디</string>
    <string name="ConfirmNumText"> 인증번호 </string>
    <string name="PassHintText">비밀번호</string>
    <string name="LoginButtonText">로그인</string>
    <string name="SignUpButtonText">가입</string>
    <string name="ConfirmButtonText">인증</string>
    <string name="SignUpTitleText">회원가입</string>
    <string name="LoginTitleText">로그인</string>
    <string name="ConfirmTitleText">이메일 인증</string>
    <string name="SignUpTvBtnText">회원가입 하기</string>
    <string name="SignUpTvBtnText2">아직 회원이 아니라면,</string>
    <string name="SignUpIdHint">사용할 아이디 (이메일)</string>
    <string name="SignUpNameHint">이름 (닉네임)</string>
    <string name="SignUpPassHint">비밀번호</string>
    <string name="SignUpRePassHint">비밀번호 재입력</string>
    <string name="forgotPassword">
        <u>비밀번호 찾기</u>
    </string>

    <!--이미지 피커 타이틀 이름-->
    <string name="limitSelectMessage">한개의 사진만 선택할 수 있습니다.</string>
    <string name="selectDone">선택</string>
    <string name="album">앨범</string>
    <string name="galleries">갤러리</string>
    <!--이미지 선택 다이얼로그 옵션-->
    <string name="profileDialogText">사진 추가</string>
    <string name="profileDialogText1">사진 찍기</string>
    <string name="profileDialogText2">갤러리에서 선택</string>
    <string name="title_activity_main2_view">Main2View</string>
    <string name="tab_text_1">ㅇㅇㅇ</string>
    <string name="tab_text_2">을지로 게시판</string>
    <string name="tab_text_3">Hip News</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <!--옵션 다이얼로그-->
    <string name="optionDialogText">옵션</string>
    <string name="optionDialogText1">삭제</string>
    <string name="optionDialogText2">신고</string>
    <!--액션바 타이틀-->
    <string name="create_post">게시물 생성</string>
    <string name="comment">댓글</string>

    <!--가입페이지-->
    <string name="alreadySignUp">이미 회원가입했다면,
        <u>로그인하기</u>
    </string>
    <string name="facebookSignUpBtn">페이스북으로 가입 / 로그인</string>
    <string name="emailSignUp">이메일로 가입</string>

    <!--aws-->
    <string name="identityPoolId">us-east-1:0c652214-5f53-480f-8c89-799b8ce4ff31</string>
    <string name="identityFaceBookPoolId">us-east-1:0c652214-5f53-480f-8c89-799b8ce4ff31</string>
</resources>
