<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.Login.SignInView">
    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/space"
            android:elevation="0dp"
            app:elevation="5dp"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:id="@+id/appbar">
        <android.support.v7.widget.Toolbar
                android:elevation="0dp"
                android:id="@+id/toolbar_rating"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/white"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay">
            <!--백버튼-->
            <ImageView
                    android:id="@+id/backBtn"
                    android:src="@drawable/left_arrow"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />
            <!--타이틀 텍스트-->
            <TextView
                    android:text="@string/LoginTitleText"
                    style="@style/TitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <Space
            android:layout_width="match_parent" android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            app:layout_constraintBottom_toTopOf="@id/userIdText"
            android:id="@+id/space"/>
    <!--아아디 입력란-->
    <EditText
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space"
            app:layout_constraintBottom_toTopOf="@id/userIdGuideLabel"
            style="@style/EditTextStyle"
            android:inputType="textEmailAddress"
            android:hint="@string/IdHintText"
            android:id="@+id/userIdText"/>
    <!--아이디 입력 가이드 라벨-->
    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userIdText"
            app:layout_constraintBottom_toTopOf="@id/userPassText"
            style="@style/EditTextLabel"
            tools:text="아이디 가이드 라벨"
            android:id="@+id/userIdGuideLabel"/>
    <!--비밀번호 입력란-->
    <EditText
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/userIdGuideLabel"
            app:layout_constraintBottom_toTopOf="@id/userPassGuideLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/EditTextStyle"
            android:layout_marginBottom="@dimen/edit_text_bottom_margin"
            android:inputType="textPassword"
            android:hint="@string/PassHintText"
            android:id="@+id/userPassText"/>
    <!--비밀번호 입력 가이드 라벨-->
    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userPassText"
            app:layout_constraintBottom_toTopOf="@id/forgotPassBtn"
            style="@style/EditTextLabel"
            tools:text="비밀번호 가이드 라벨"
            android:id="@+id/userPassGuideLabel"/>
    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userPassGuideLabel"
            android:textColor="@color/gray5"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:textSize="14dp"
            android:layout_gravity="right"
            android:text="@string/forgotPassword"
            android:id="@+id/forgotPassBtn"/>
    <!--가입 버튼-->
    <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/ButtonLinearStyle"
            android:background="@drawable/sign_up_success_non_button"
            android:enabled="true"
            android:id="@+id/signInCompleteBtn">
        <TextView
                android:layout_width="wrap_content" android:layout_height="20dp"
                style="@style/ButtonTextStyle"
                android:text="@string/LoginButtonText"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>