<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".View.Login.SignUpView">
    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/space"
            android:elevation="0dp"
            app:elevation="5dp"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:id="@+id/appbar">
        <android.support.v7.widget.Toolbar
                android:layout_width="match_parent" android:layout_height="55dp"
                android:elevation="0dp"
                android:background="@color/white"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:id="@+id/toolbar">
            <!--백버튼-->
            <ImageView
                    android:layout_width="40dp" android:layout_height="40dp"
                    android:src="@drawable/left_arrow"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:id="@+id/backBtn"/>
            <!--타이틀 텍스트-->
            <TextView
                    android:layout_width="wrap_content" android:layout_height="match_parent"
                    android:text="@string/SignUpTitleText"
                    style="@style/TitleTextStyle"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <!--여백-->
    <Space
            android:layout_width="match_parent" android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            app:layout_constraintBottom_toTopOf="@id/typeEmailEtx"
            android:id="@+id/space"/>
    <!--이메일 입력란-->
    <EditText
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            app:layout_constraintBottom_toTopOf="@id/guidTextEmail"
            android:layout_marginTop="16dp"
            style="@style/EditTextStyle"
            android:inputType="textEmailAddress"
            android:hint="@string/SignUpIdHint"
            android:id="@+id/typeEmailEtx"/>
    <!--이메일 입력 가이드 라벨-->
    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/typeEmailEtx"
            app:layout_constraintBottom_toTopOf="@id/typeNameEtv"
            style="@style/EditTextLabel"
            tools:text="이메일 가이드 라벨"
            android:id="@+id/guidTextEmail"/>
    <!--이름 입력란-->
    <EditText
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guidTextEmail"
            app:layout_constraintBottom_toTopOf="@id/guidTextName"
            style="@style/EditTextStyle"
            android:inputType="text"
            android:hint="@string/SignUpNameHint"
            android:id="@+id/typeNameEtv"/>
    <!--이름 입력 가이드 라벨-->
    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/typeNameEtv"
            app:layout_constraintBottom_toTopOf="@id/typePassEtv"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/EditTextLabel"
            tools:text="이메일 가이드 라벨"
            android:id="@+id/guidTextName"/>
    <!--비밀번호 입력란-->
    <EditText
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guidTextName"
            app:layout_constraintBottom_toTopOf="@id/guidTextPass"
            style="@style/EditTextStyle"
            android:inputType="textPassword"
            android:hint="@string/SignUpPassHint"
            android:id="@+id/typePassEtv"/>
    <!--비밀번호 입력 가이드 라벨-->
    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/typePassEtv"
            app:layout_constraintBottom_toTopOf="@id/retypePassTV"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/EditTextLabel"
            tools:text="이메일 가이드 라벨"
            android:id="@+id/guidTextPass"/>
    <!--비밀번호 재입력란-->
    <EditText
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guidTextPass"
            app:layout_constraintBottom_toTopOf="@id/guidTextRetypePass"
            style="@style/EditTextStyle"
            android:inputType="textPassword"
            android:hint="@string/SignUpRePassHint"
            android:id="@+id/retypePassTV"/>
    <!--비밀번호 재입력 가이드 라벨-->
    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/retypePassTV"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/EditTextLabel"
            tools:text="이메일 가이드 라벨"
            android:id="@+id/guidTextRetypePass"/>
    <!--약관 체크박스-->
    <CheckBox
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/signUpCompleteBtn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="8dp"
            android:text="이용약관, 개인정보 수집 및 이용에 동의합니다."
            android:textColor="@color/disable"
            android:id="@+id/termCB"/>
    <!--가입 버튼-->
    <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/ButtonLinearStyle"
            android:background="@drawable/sign_up_success_non_button"
            android:enabled="true"
            android:id="@+id/signUpCompleteBtn">
        <TextView
                android:layout_width="wrap_content" android:layout_height="20dp"
                style="@style/ButtonTextStyle"
                android:text="@string/SignUpButtonText"/>
    </LinearLayout>
    <!--프로그래스-->
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:background="@color/disableAlpha"
            android:visibility="gone"
            android:id="@+id/progressBar">
        <com.victor.loading.rotate.RotateLoading
                android:layout_width="80dp" android:layout_height="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:loading_width="5dp"
                app:loading_color="#000000"
                android:layout_centerInParent="true"
                android:id="@+id/Progress"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>