<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/disable"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".View.Login.LoginView">
    <!--페북 로그인 버튼(숨김)-->
    <!--<com.facebook.login.widget.LoginButton-->
            <!--android:layout_width="match_parent" android:layout_height="100dp"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--android:visibility="gone"-->
            <!--style="@style/FacebookLoginButton"-->
            <!--android:id="@+id/facebookSignIn"/>-->
    <!--페북 로그인/가입 버튼-->
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/signUpButton"
            style="@style/ButtonLinearStyle"
            android:background="@drawable/sign_up_button_facebook"
            android:id="@+id/facebookSignInBtn">
        <ImageView
                android:layout_width="20dp" android:layout_height="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/com_facebook_button_icon_white"
                android:layout_margin="12dp"/>
        <TextView
                android:layout_width="0dp" android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/ButtonTextStyle"
                android:text="@string/facebookSignUpBtn"
                android:layout_marginEnd="32dp"/>
    </android.support.constraint.ConstraintLayout>
    <!--이메일로 가입 버튼-->
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/signInBtn"
            style="@style/ButtonLinearStyle"
            android:background="@drawable/sign_up_button"
            android:id="@+id/signUpButton" >
        <ImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/ic_email"
                android:layout_margin="12dp"
                android:layout_width="20dp"
                android:layout_height="20dp" />
        <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="0dp" android:layout_height="match_parent"
                style="@style/ButtonTextStyle"
                android:layout_marginEnd="32dp"
                android:text="@string/emailSignUp"/>
    </android.support.constraint.ConstraintLayout>
    <!--회원가입 텍스트 버튼-->
    <TextView
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/signInBtn"
            android:text="@string/alreadySignUp"
            android:layout_marginBottom="30dp"
            android:textSize="14dp"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:background="@color/disableAlpha"
            android:visibility="gone"
            android:id="@+id/progressBar">
        <com.victor.loading.rotate.RotateLoading
                android:layout_width="80dp" android:layout_height="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:loading_width="5dp"
                app:loading_color="#000000"
                android:layout_centerInParent="true"
                android:id="@+id/Progress"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>